# qute-script-manager

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
qusrm/: __main__.py
qute_script_manager/: __main__.py
