[project]
name = "qute_script_manager"
version = "0.1.0"
description = "qutebrowser userscript manager"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = ["click>=8.1.7", "tomli-w", "requests", "prettytable"]
[[project.authors]]
name = "purarue"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
"qute_script_manager" = "qute_script_manager.__main__:main"

[project.urls]
Homepage = "https://github.com/purarue/qute_script_manager"

[project.optional-dependencies]
testing = ["flake8", "mypy", "pytest"]

[tool.mypy]
pretty = true
show_error_context = true
show_error_codes = true
check_untyped_defs = true
namespace_packages = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[tool.setuptools.packages.find]
include = ["qute_script_manager"]
exclude = []
